# ReelmakerAI

./: ExportFragment.kt.bak  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  LutShaderRenderer.cpp  ShaderUtils.cpp  WatermarkOverlay.cpp  native_bridge.cpp
app/src/main/res/drawable/: asset_bloom.xml  asset_new.xml  asset_portrait.xml  bg_gradient.xml  bg_ratio_chip.xml  button_primary.xml  button_tool_black.xml  button_tool_compact.xml  ic_addphoto.xml  ic_addvideo.xml  ic_animated.xml  ic_animation.xml  ic_audio.xml  ic_background.xml  ic_beat.xml  ic_blur.xml  ic_brand.xml  ic_canvas.xml  ic_check.xml  ic_chipmunk.xml  ic_collage.xml  ic_color.xml  ic_crop.xml  ic_customfx.xml  ic_cut.xml  ic_echo.xml  ic_effect.xml  ic_emoji.xml  ic_export.xml  ic_filter.xml  ic_flip.xml  ic_font.xml  ic_frame_placeholder.xml  ic_glitch.xml  ic_insert.xml  ic_logo.xml  ic_lut.xml  ic_maximize.xml  ic_merge.xml  ic_mood.xml  (+34 more)
app/src/main/res/layout/: activity_ai_studio.xml  activity_collage_editor.xml  activity_edit_video.xml  activity_export.xml  activity_export_result.xml  activity_fullscreen_video.xml  activity_intro.xml  activity_main.xml  activity_main_board.xml  activity_photo_editor.xml  activity_resize_editor.xml  activity_rotate_editor.xml  activity_splash.xml  activity_tool_editor.xml  activity_video_preview.xml  changelog_preview.xml  dashboard_summary.xml  (+57 more)
app/src/main/res/layout-land/: activity_main.xml
(+229 files in other folders)
